--- a/website/src/index.pug
+++ b/website/src/index.pug
@@ -7,8 +7,9 @@ html
     body
         #sidebar
             #link-title 
-                img(src='bss_small.png')
+                img(src=require('./assets/bss_small.png'))
                 span Device
-            .sidebar-link#link-first View 1
-            .sidebar-link#link-second Averylongtitleforaview
+            .sidebar-link#link-first Dataview 1
+            .sidebar-link#link-second Bar Chart
+            .sidebar-link#link-view-simple Dataview simple
         #mainarea
