--- a/website/src/components/chartcard/chartcard.pug
+++ b/website/src/components/chartcard/chartcard.pug
@@ -1,7 +1,11 @@
 div.chartcard
     .charttitlebar
-        .charttitlediv
-            each value, key in items
-                .chartoption(id=value.id, data-values=value.values)= key
+        each value, key in items
+            .chartoption(id=value.id, data-values=value.values)= key
         #basicchartlegend.chartlegenddiv
+    #timeselectbar.charttitlebar
+        .chartoption#timetoday Today
+        .chartoption#timethisweek This Week
+        div Averaging:
+        input#avrgtimeinput(pattern="^[1-9]\d*[smhdw]$", value="10m")
     #basicchart.chartdiv
