--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -47,6 +47,6 @@ body
 
     #mainarea
         flex-grow: 1
-        padding: 20px
+        // padding: 20px
         overflow-y: auto
         overflow-x: hidden
