Additions to website and server

--- a/website/src/index.pug
+++ b/website/src/index.pug
@@ -1,15 +1,17 @@
 doctype html5
 html
     head
-        title BSS Hochspannungstechnik
-        link(href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet")
+        title BSS Netzmonitor
+        //- link(href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet")
 
     body
         #sidebar
             #link-title 
                 img(src=require('./assets/bss_small.png'))
-                span Device
-            .sidebar-link#link-first Dataview 1
+                span Netzmonitor
+            .sidebar-link#link-map Karte
+            .sidebar-link#link-first Data
             .sidebar-link#link-second Bar Chart
             .sidebar-link#link-view-simple Dataview simple
+            .sidebar-link#link-status Status
         #mainarea
