--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -4,20 +4,26 @@
     display: flex
     flex-direction: column
     box-shadow: 2px 2px 8px 4px whitesmoke
-    border: 1px solid whitesmoke
+    padding: 10px
     .charttitlebar
         display: flex
         flex-direction: row
         align-items: center
         color: #444
-        margin-bottom: 10px
-        padding: 8px
-        box-shadow: 1px 2px 5px 0px #FBFBFB
-        background-color: lightgreen
-        .chartoption
+        // margin-bottom: 10px
+        // padding: 8px
+        // box-shadow: 1px 2px 5px 0px #FBFBFB
+        // background-color: lightgreen
+        .bartitle
+            width: 150px
             margin-left: 10px
+        .chartoption
+            display: flex
+            align-items: center
+            margin-left: 1px
+            margin-bottom: 1px
             background: whitesmoke
-            border-radius: 14px
+            // border-radius: 14px
             padding: 8px
             padding-left: 10px
             padding-right: 10px
@@ -34,7 +40,7 @@
             display: flex
             justify-content: flex-end
             align-items: center
-            color: gray
+            // color: gray
     .chartdiv
         flex-grow: 1
         margin: 5px
