--- a/website/src/components/dataview-simple/dataview-simple.pug
+++ b/website/src/components/dataview-simple/dataview-simple.pug
@@ -1,8 +1,9 @@
-.charttitlebar
-    #siteselect.chartoption Störzbachstraße 15
-    #valueselect.chartoption Voltage
-        #valueselect-content.select-content
-            span.valueoption THD
-    #timeselect.chartoption Today
-    #avrgselect.chartoption 10 Minutes
-#basicchart.chartdiv
+#container-view-simple
+    .charttitlebar
+        #siteselect.chartoption Störzbachstraße 15
+        #valueselect.chartoption Voltage
+            #valueselect-content.select-content
+                span.valueoption THD
+        #timeselect.chartoption Today
+        #avrgselect.chartoption 10 Minutes
+    #basicchart.chartdiv
