--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -4,6 +4,7 @@
 
 html, body
     margin: 0
+    padding: 0
     height: 100%
     overflow: hidden
 
@@ -14,7 +15,8 @@ body
     #sidebar
         height: 100%
         background: linear-gradient(#086bc2,#2c9dd1)
-        // box-shadow: 0px 0px 5px 1px #BBB
+        box-shadow: 0px 0px 2px 3px rgba(0,0,0,0.3)
+        z-index: 444
         color: white
 
         #link-title
