--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -1,6 +1,6 @@
 *
     box-sizing: border-box
-    font-family: sans //, 'Roboto'
+    font-family: 'Noto Sans','Roboto', sans
 
 html, body
     margin: 0
@@ -15,7 +15,7 @@ body
     #sidebar
         height: 100%
         background: linear-gradient(#086bc2,#2c9dd1)
-        box-shadow: 0px 0px 2px 3px rgba(0,0,0,0.3)
+        box-shadow: 0px 0px 2px 4px rgba(0,0,0,0.3)
         z-index: 444
         color: white
 
@@ -40,6 +40,7 @@ body
             justify-content: center
             padding: 15px
             margin-top: 10px
+            font-size: 18px
             &:hover
                 cursor: pointer
                 background-color: rgba(190,205,228,0.3)
