--- a/website/src/components/map/tooltip.pug
+++ b/website/src/components/map/tooltip.pug
@@ -20,4 +20,4 @@ div#tooltip
             td.thd3 #{parseFloat(THDU3).toFixed(2)}
             td %
     div.tooltipline.timeSinceLastStatus
-        span #{parseFloat(timeSinceLastStatus).toFixed(2)} s ago
+        span #{timeSinceLastStatusText} ago
