--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -1,6 +1,9 @@
 *
     box-sizing: border-box
     font-family: 'Noto Sans','Roboto', sans
+    text-rendering: optimizeLegibility
+    -webkit-font-smoothing: antialiased
+    -moz-osx-font-smoothing: grayscale
 
 html, body
     margin: 0
