--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -62,11 +62,13 @@
                     width: 100px
                     height: 28px
 
-        #chartlegend
-            display: flex
-            flex-direction: row
-            span
-                padding-left: 5px
+    #chartlegend
+        display: flex
+        flex-direction: row
+        text-align: right
+        margin-left: auto
+        span
+            padding-left: 5px
     .containerforspinner
         width: 100%
         height: 100%
