--- a/website/src/components/map/tooltip.sass
+++ b/website/src/components/map/tooltip.sass
@@ -1,17 +1,25 @@
 .leaflet-tooltip
-    background-color: gray !important
-    border: 1px solid darkgray !important
+    background-color: white !important
+    border: 1px solid darkgrey !important
 
 .leaflet-tooltip-right.mapTooltip
     &:before
-        border-right-color: gray !important
+        border-right-color: darkgrey !important
 
-#tooltip
+.tooltip
     font-size: 16px
-    color: white
+    color: black
+
+    .tooltip-title
+        font-weight: bold
+        margin: auto
+
+    .tooltip-subtitle
+        font-style: italic
+
     table
         font-size: 16px
-        color: white
+        color: black
         font-family: monospace
         tr
             td
