--- a/website/src/components/status/status.sass
+++ b/website/src/components/status/status.sass
@@ -1,6 +1,7 @@
 table#statustable
-    margin: 20px
-    margin-left: 40px
+    padding-right: 20px
+    padding-left: 40px
+    margin: auto
     border-collapse: collapse    
     td
         padding-top: 4px
