--- a/website/src/components/status/status.pug
+++ b/website/src/components/status/status.pug
@@ -17,7 +17,7 @@ table#statustable
             td THD2
             td THD2
             td Last Status
-        each location, location_id in desc
+        each location, location_id in desc.measurements
             tr.gridrow
                 td.location_id #{location_id}
                 td.U1 #{location.U1} V
