fix in server for handle coordinates

--- a/website/src/components/status/status.pug
+++ b/website/src/components/status/status.pug
@@ -5,7 +5,7 @@ table#statustable
         tr.cordsinfo
             td(colspan=999)
                 span Coordinates:
-                input(type="value", placeholder="Latitude").cordsinput
+                input(type="value", placeholder="Latitude", value=desc.coordinates).cordsinput
                 input(type="value", placeholder="Longitude").cordsinput
                 button.cordsbutton Set
         tr.columntitles
