--- a/website/src/components/map/tooltip.sass
+++ b/website/src/components/map/tooltip.sass
@@ -13,6 +13,10 @@
     .tooltip-title
         font-weight: bold
         margin: auto
+    
+    .tooltip-cords
+        font-size: 12px
+        font-style: italic
 
     .tooltip-subtitle
         font-style: italic
