--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -4,14 +4,15 @@
     display: flex
     flex-direction: column
     box-shadow: 2px 2px 8px 4px whitesmoke
-    padding: 10px
     #charttitle-container
         //display: flex
         flex-direction: row
         justify-content: space-between
         align-items: center
+        padding: 10px
         //margin-bottom: 10px
         #chartselection-container
+            //padding: 10px
             .charttitlebar
                 display: flex
                 flex-direction: row
@@ -68,25 +69,26 @@
         flex-direction: row
         text-align: right
         margin-left: auto
-        span
-            padding-left: 5px
+        padding-right: 10px
+        min-height: 23px
+        .legendlabel
+            margin-left: 10px
+            font-weight: bold
+        .withdata
+            width: 80px
+            margin-left: 5px
+            text-align: left
+
     .containerforspinner
         width: 100%
         height: 100%
+        padding: 10px
         display: flex
         position: relative
 
         .chartdiv
-            white-space: nowrap;
             position: relative
             flex: auto
-            margin: 5px
-            min-width: 100%
-            max-height: 100% 
-            .infobar
-                position: absolute
-                height: 50px
-                background-color: red
 
 .date-picker-wrapper
     margin-top: 10px
