--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -85,28 +85,9 @@
         padding: 10px
         display: flex
         position: relative
-
         .chartdiv
+            width: 100%
+            height: 100%
             position: relative
             flex: auto
 
-.date-picker-wrapper
-    margin-top: 10px
-    background-color: white !important
-    box-shadow: 3px 3px 10px rgba(0,0,0,0.15)
-    border: none
-    .drp_top-bar
-        font-size: 14px
-    .month-wrapper
-        border: none !important
-        .real-today
-            background: linear-gradient(to bottom right,#086bc2,#2c9dd1) !important
-            // background-color: #086bc2 !important
-            color: white !important
-            font-weight: 700
-    .month-name
-        font-size: 12px !important
-    .week-name
-        font-size: 12px !important
-    .time
-        color: #333 !important
