--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -2,7 +2,7 @@
     box-sizing: border-box
     font-family: 'Noto Sans','Roboto', sans
     text-rendering: optimizeLegibility
-    -webkit-font-smoothing: antialiased
+    //-webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
 
 html, body
