clean up and more flexibility between map, status and data

--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -75,19 +75,20 @@
             margin-left: 10px
             font-weight: bold
         .withdata
-            width: 80px
+            width: 90px
             margin-left: 5px
             text-align: left
 
     .containerforspinner
-        width: 100%
+        //width: 100%
         height: 100%
         padding: 10px
         display: flex
         position: relative
+        flex: 0 1 auto
         .chartdiv
             width: 100%
-            height: 100%
-            position: relative
-            flex: auto
+            //height: 100%
+            //position: relative
+
 
