--- a/website/src/components/map/map.sass
+++ b/website/src/components/map/map.sass
@@ -7,3 +7,9 @@
         // filter: brightness(105%)
     .leaflet-interactive
         filter: opacity(70%)
+    .leaflet-tooltip
+        background-color: white !important
+        border: 1px solid darkgrey !important
+    .leaflet-tooltip-right.mapTooltip
+        &:before
+            border-right-color: darkgrey !important
