--- a/website/src/index.pug
+++ b/website/src/index.pug
@@ -16,7 +16,7 @@ html
             .sidebar-link#link-map
                 i.pe-7s-map.pe-fw
                 span Map
-            .sidebar-link#link-first
+            .sidebar-link#link-data
                 i.pe-7s-graph1.pe-fw
                 span Data
             //- .sidebar-link#link-second Bar Chart
