--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -1,3 +1,7 @@
+//@import '@material/button/mdc-button'
+@import './assets/Icon-font-7-stroke-PIXEDEN-v-1.2.0/pe-icon-7-stroke/css/pe-icon-7-stroke.css'
+@import './assets/Icon-font-7-stroke-PIXEDEN-v-1.2.0/pe-icon-7-stroke/css/helper.css'
+    
 *
     box-sizing: border-box
     font-family: 'Noto Sans','Roboto', sans
