--- a/website/src/components/status/status.pug
+++ b/website/src/components/status/status.pug
@@ -1,29 +1,36 @@
-table#statustable
+div#status
     each desc, gridname in grids
-        tr.header
-            td(colspan=999, id="gridname-"+desc.id) #{gridname} 
-        tr.cordsinfo
-            td(colspan=999)
-                span Coordinates:
-                input(type="value", placeholder="Latitude", value=desc.coordinates.lat, id="lat-"+desc.id).cordsinput
-                input(type="value", placeholder="Longitude", value=desc.coordinates.lng, id="lng-"+desc.id).cordsinput
-                button(id="button-"+desc.id).cordsbutton Set
-        tr.columntitles
-            td ID
-            td U1
-            td U2
-            td U2
-            td THD1
-            td THD2
-            td THD2
-            td Last Status
-        each location, location_id in desc.measurements
-            tr.gridrow
-                td.location_id #{location_id}
-                td.U1 #{location.U1} V
-                td.U2 #{location.U2} V
-                td.U3 #{location.U3} V
-                td.U1 #{location.THDU1}%
-                td.U2 #{location.THDU2}%
-                td.U3 #{location.THDU3}%
-                td.timeSinceLastStatus #{location.timeSinceLastStatusText} ago
+        table.statustable
+            tr.header
+                td(colspan=999, id="gridname-"+desc.id) #{gridname} 
+            tr.cordsinfo
+                td(colspan=999)
+                    div.cordsinfosetting
+                        span Coordinates:
+                        input(type="value", placeholder="Latitude", value=desc.coordinates.lat, id="lat-"+desc.id).mdl-textfield__input.cordsinput
+                        input(type="value", placeholder="Longitude", value=desc.coordinates.lng, id="lng-"+desc.id).mdl-textfield__input.cordsinput
+                        button(id="cordbutton-"+desc.id).mdc-button.cordsbutton Set
+                        if desc.buttonDisabled
+                            button(id="gotocordsbutton-"+desc.id, disabled).mdc-button.gotocordsbutton view on map
+                        else
+                            button(id="gotocordsbutton-"+desc.id).mdc-button.gotocordsbutton view on map
+                        
+            tr.columntitles
+                td ID
+                td U1
+                td U2
+                td U2
+                td THD1
+                td THD2
+                td THD2
+                td Last Status
+            each location, location_id in desc.measurements
+                tr.gridrow
+                    td.location_id #{location_id}
+                    td.U1 #{location.U1} V
+                    td.U2 #{location.U2} V
+                    td.U3 #{location.U3} V
+                    td.U1 #{location.THDU1}%
+                    td.U2 #{location.THDU2}%
+                    td.U3 #{location.THDU3}%
+                    td.timeSinceLastStatus #{location.timeSinceLastStatusText} ago
