--- a/website/src/components/status/status.sass
+++ b/website/src/components/status/status.sass
@@ -1,62 +1,71 @@
-table#statustable
-    padding-right: 20px
-    padding-left: 40px
-    margin: auto
-    border-collapse: collapse    
-    td
-        padding-top: 4px
-        padding-bottom: 4px
-    tr.header
-        color: #333
-        font-size: 20
-        &:hover
-            cursor: pointer
-            background-color: #FBFBFB
+#status
+    table.statustable
+        width: 100%
+        max-width: 800px
+        padding-right: 20px
+        padding-left: 20px
+        margin: auto
+        //border-collapse: collapse  
         td
-            border-bottom: 1px solid #333
-        &:not(:first-child)
+            padding-top: 4px
+            padding-bottom: 4px
+        tr.header
+            color: #333
+            font-size: 20
+            &:hover
+                cursor: pointer
+                background-color: #FBFBFB
             td
-                padding-top: 20px
+                border-bottom: 1px solid #333
+            &:not(:first-child)
+                td
+                    padding-top: 20px
 
-    tr.cordsinfo
-        color: #333
-        font-size:
-        &:hover
-            //cursor: pointer
-            background-color: #FBFBFB
-        &:not(:first-child)
+        tr.cordsinfo
+            color: #333
+            font-size:
+            &:hover
+                //cursor: pointer
+                background-color: #FBFBFB
+            &:not(:first-child)
+                td
+                    .cordsinfosetting
+                        display: flex
+                        span 
+                            display: inline-flex
+                            align-items: center
+                            white-space: nowrap
+                        .cordsinput
+                            min-width: 100px
+                            max-width: 200px
+                            margin: auto
+                            padding-left: 4px
+                            padding-right: 4px
+                        .cordsbutton
+                            margin-left: 4px
+                            margin-right: 4px
+                        .gotocordsbutton
+                            width: 140px
+                            margin-left: 4px
+                            margin-right: 4px           
+
+        tr.columntitles
             td
-                text-align: right
-                .cordsinput
-                    margin-left: 4px
-                    margin-right: 4px
-                .cordsbutton
-                    cursor: pointer
-                    margin-left: 4px
-                    margin-right: 4px
-                    background-color: green
-                    border-style: solid
-                    box-shadow: blur
-                    border-radius: 10%
-                    border-color: green
-
-    tr.columntitles
-        td
-            font-size: 12
-            color: darkgray
-            &:first-child
-                padding-left: 25px
-            &:not(:first-child)
-                text-align: right
-    
-    tr.gridrow
-        &:hover
-            //cursor: pointer
-            background-color: #FBFBFB
-        td 
-            &:first-child
-                font-weight: 700
-                padding-left: 25px
-            &:not(:first-child)
-                padding-left: 25px
-                text-align: right
+                font-size: 12
+                color: darkgray
+                &:first-child
+                    padding-left: 25px
+                &:not(:first-child)
+                    text-align: right
+        
+        tr.gridrow
+            &:hover
+                //cursor: pointer
+                background-color: #FBFBFB
+            td 
+                &:first-child
+                    font-weight: 700
+                    padding-left: 25px
+                &:not(:first-child)
+                    padding-left: 25px
+                    text-align: right
