--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -57,9 +57,9 @@
                     width: 50px
                     height: 28px
                     margin-right: 10px
-                    border: 1px solid #AAA
+                    //border: 1px solid #AAA
                     text-align: center
-                    border-radius: 3px
+                    //border-radius: 3px
                 select
                     width: 100px
                     height: 28px
