--- a/website/src/components/status/status.sass
+++ b/website/src/components/status/status.sass
@@ -13,7 +13,7 @@
             color: #333
             font-size: 20
             &:hover
-                cursor: pointer
+                //cursor: pointer
                 background-color: #FBFBFB
             td
                 border-bottom: 1px solid #333
@@ -39,8 +39,11 @@
                             min-width: 100px
                             max-width: 200px
                             margin: auto
+                            height: 36px
                             padding-left: 4px
                             padding-right: 4px
+                            padding-bottom: 0px
+                            padding-top: 0px
                         .cordsbutton
                             margin-left: 4px
                             margin-right: 4px
@@ -60,7 +63,7 @@
         
         tr.gridrow
             &:hover
-                //cursor: pointer
+                cursor: pointer
                 background-color: #FBFBFB
             td 
                 &:first-child
