--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -29,7 +29,7 @@
                     display: flex
                     align-items: center
                     // box-shadow: inset 0px 0px 1px 1px #FAFAFA
-                    padding: 3px
+                    //padding: 3px
                     padding-left: 10px
                     padding-right: 10px
                     font-weight: 600
