better design with cards

--- a/website/src/components/chartcard/chartcard.pug
+++ b/website/src/components/chartcard/chartcard.pug
@@ -1,5 +1,5 @@
 div.chartcard
-    #charttitle-container
+    #charttitle-container.card
         #chartselection-container
             .charttitlebar
                 .bartitle Location:
@@ -28,8 +28,10 @@ div.chartcard
                     option(value='d') Day
                     option(value='w') Weeks
 
-    #chartlegend.chartlegenddiv
-    .containerforspinner
-        #basicchart.chartdiv
-        .spinner
-        .splashmessage
+    .cardgraph
+        #chartlegend.chartlegenddiv
+    .cardgraph
+        .containerforspinner
+            #basicchart.chartdiv
+            .spinner
+            .splashmessage
