--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -4,12 +4,16 @@
     display: flex
     flex-direction: column
     box-shadow: 2px 2px 8px 4px whitesmoke
+    margin-bottom: 20px
     #charttitle-container
-        //display: flex
-        flex-direction: row
-        justify-content: space-between
-        align-items: center
+        min-width: 1000px
+        margin-top: 20px
+        margin-left: 20px
+        margin-right: 20px
         padding: 10px
+        border: 1px solid lightgray
+        background-color: white
+        box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.1)
         //margin-bottom: 10px
         #chartselection-container
             //padding: 10px
@@ -65,8 +69,6 @@
                     height: 28px
 
     #chartlegend
-        display: flex
-        flex-direction: row
         text-align: right
         margin-left: auto
         padding-right: 10px
@@ -80,15 +82,23 @@
             text-align: left
 
     .containerforspinner
-        //width: 100%
-        height: 100%
+        width: 100%
+        height: 70%
         padding: 10px
         display: flex
         position: relative
         flex: 0 1 auto
         .chartdiv
             width: 100%
-            //height: 100%
-            //position: relative
+            //height: 680px
+            position: relative
 
-
+.cardgraph
+    min-width: 1000px
+    margin-top: 20px
+    margin-left: 20px
+    margin-right: 20px
+    padding: 10px
+    border: 1px solid lightgray
+    background-color: white
+    box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.1)
