--- a/website/src/components/status/status.sass
+++ b/website/src/components/status/status.sass
@@ -1,74 +1,88 @@
 #status
-    table.statustable
-        width: 100%
-        max-width: 800px
-        padding-right: 20px
-        padding-left: 20px
-        margin: auto
-        //border-collapse: collapse  
-        td
-            padding-top: 4px
-            padding-bottom: 4px
-        tr.header
-            color: #333
-            font-size: 20
-            &:hover
-                //cursor: pointer
-                background-color: #FBFBFB
+    .card
+        width: 850px
+        margin-top: 20px
+        margin-left: auto
+        margin-right: auto
+        padding: 10px
+        border: 1px solid lightgray
+        background-color: white
+        box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.1)
+        display: flex
+        flex-direction: column
+        justify-content: flex-start
+        table.statustable
+            //width: 100%
+            //max-width: 850px
+            //margin: auto
+            //border-collapse: collapse  
             td
-                border-bottom: 1px solid #333
-            &:not(:first-child)
+                padding-top: 4px
+                padding-bottom: 4px
+            tr.header
+                color: #333
+                font-size: 20
+                &:hover
+                    //cursor: pointer
+                    background-color: #FBFBFB
                 td
-                    padding-top: 20px
+                    border-bottom: 1px solid #333
+                &:not(:first-child)
+                    td
+                        padding-top: 20px
 
-        tr.cordsinfo
-            color: #333
-            font-size:
-            &:hover
-                //cursor: pointer
-                background-color: #FBFBFB
-            &:not(:first-child)
+            tr.cordsinfo
+                color: #333
+                font-size:
+                &:hover
+                    //cursor: pointer
+                    background-color: #FBFBFB
+                &:not(:first-child)
+                    td
+                        .cordsinfosetting
+                            display: flex
+                            span 
+                                display: inline-flex
+                                align-items: center
+                                white-space: nowrap
+                            .cordsinput
+                                min-width: 100px
+                                max-width: 200px
+                                margin: auto
+                                height: 36px
+                                padding-left: 4px
+                                padding-right: 4px
+                                padding-bottom: 0px
+                                padding-top: 0px
+                            .cordsbutton
+                                margin-left: 4px
+                                margin-right: 4px
+                                background-color: #086bc2
+                            .gotocordsbutton
+                                &:not(:disabled)
+                                    background-color: #086bc2
+                                width: 140px
+                                margin-left: 4px
+                                margin-right: 4px        
+
+
+            tr.columntitles
                 td
-                    .cordsinfosetting
-                        display: flex
-                        span 
-                            display: inline-flex
-                            align-items: center
-                            white-space: nowrap
-                        .cordsinput
-                            min-width: 100px
-                            max-width: 200px
-                            margin: auto
-                            height: 36px
-                            padding-left: 4px
-                            padding-right: 4px
-                            padding-bottom: 0px
-                            padding-top: 0px
-                        .cordsbutton
-                            margin-left: 4px
-                            margin-right: 4px
-                        .gotocordsbutton
-                            width: 140px
-                            margin-left: 4px
-                            margin-right: 4px           
-
-        tr.columntitles
-            td
-                font-size: 12
-                color: darkgray
-                &:first-child
-                    padding-left: 25px
-                &:not(:first-child)
-                    text-align: right
-        
-        tr.gridrow
-            &:hover
-                cursor: pointer
-                background-color: #FBFBFB
-            td 
-                &:first-child
-                    font-weight: 700
-                    padding-left: 25px
-                &:not(:first-child)
-                    padding-left: 25px
-                    text-align: right
+                    font-size: 12
+                    color: darkgray
+                    &:first-child
+                        padding-left: 25px
+                    &:not(:first-child)
+                        text-align: right
+            
+            tr.gridrow
+                &:hover
+                    cursor: pointer
+                    background-color: #FBFBFB
+                td 
+                    &:first-child
+                        font-weight: 700
+                        padding-left: 25px
+                    &:not(:first-child)
+                        padding-left: 25px
+                        text-align: right
