new prod with small fixes

--- a/website/src/components/status/status.sass
+++ b/website/src/components/status/status.sass
@@ -12,9 +12,10 @@
         flex-direction: column
         justify-content: flex-start
         table.statustable
-            //width: 100%
-            //max-width: 850px
-            //margin: auto
+            width: 100%
+            padding-left: 10px
+            padding-right: 10px
+            margin: auto
             //border-collapse: collapse  
             td
                 padding-top: 4px
