--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -1,12 +1,6 @@
-.chartcard
-    width: 100%
-    height: 100%
-    display: flex
-    flex-direction: column
-    box-shadow: 2px 2px 8px 4px whitesmoke
+.chartgraph
     margin-bottom: 20px
     #charttitle-container
-        min-width: 1000px
         margin-top: 20px
         margin-left: 20px
         margin-right: 20px
@@ -50,7 +44,7 @@
                         &[type='text']
                             font-size: 14px
                             font-family: 'Roboto'
- 
+
                 .option-container
                     display: flex
                     border: 1px solid #AAA
@@ -93,12 +87,11 @@
             //height: 680px
             position: relative
 
-.cardgraph
-    min-width: 1000px
-    margin-top: 20px
-    margin-left: 20px
-    margin-right: 20px
-    padding: 10px
-    border: 1px solid lightgray
-    background-color: white
-    box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.1)
+    .cardgraph
+        margin-top: 20px
+        margin-left: 20px
+        margin-right: 20px
+        padding: 10px
+        border: 1px solid lightgray
+        background-color: white
+        box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.1)
