--- a/website/src/components/chartcard/chartcard.pug
+++ b/website/src/components/chartcard/chartcard.pug
@@ -3,20 +3,39 @@ div.chartgraph
         #chartselection-container
             .charttitlebar
                 .bartitle Location:
-                select#select-location.select-location
+                .mdc-select
+                    select#select-location.select-location.mdc-select__native-control
+                    label.mdc-floating-label.mdc-floating-label--float-above Select location
+                    .mdc-line-ripple
 
             #container-values.charttitlebar
                 .bartitle Values:
                 #values-options.option-container
                     each desc, key in values
-                        .chartoption(id=desc.id, data-values=desc.values)= key
+                        button.mdc-tab.option-button(role="tab", aria-selected="false", tabindex="-1")
+                            span.mdc-tab__content
+                                span.mdc-tab__text-label.chartoption(id=desc.id, data-values=desc.values)= key
+                            span.mdc-tab-indicator
+                                span.mdc-tab-indicator__content.mdc-tab-indicator__content--underline
+                            span.mdc-tab__ripple
+                        //.chartoption(id=desc.id, data-values=desc.values)= key
 
             #timeselectbar.charttitlebar
                 .bartitle Time Interval:
                 #timeInterval-options.option-container
                     each desc, key in timeIntervals
-                        .chartoption(id=desc.id, data-timeinterval=desc.values)= key
-                    .chartoption#random-timeframe Custom Range
+                        button.mdc-tab.option-button(role="tab", aria-selected="false", tabindex="-1")
+                            span.mdc-tab__content
+                                span.mdc-tab__text-label.chartoption(id=desc.id, data-timeinterval=desc.values)= key
+                            span.mdc-tab-indicator
+                                span.mdc-tab-indicator__content.mdc-tab-indicator__content--underline
+                            span.mdc-tab__ripple
+                    button.mdc-tab.option-button(role="tab", aria-selected="false", tabindex="-1").chartoption#random-timeframe
+                        span.mdc-tab__content
+                            span.mdc-tab__text-label.chartoption Custom Range
+                        span.mdc-tab-indicator
+                            span.mdc-tab-indicator__content.mdc-tab-indicator__content--underline
+                        span.mdc-tab__ripple
 
             #container-aggregation.charttitlebar
                 .bartitle Aggregation:
@@ -28,9 +47,8 @@ div.chartgraph
                     option(value='d') Day
                     option(value='w') Weeks
 
-    .cardgraph
+    .card
         #chartlegend.chartlegenddiv
-    .cardgraph
         .containerforspinner
             #basicchart.chartdiv
             .spinner
