--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -1,36 +1,26 @@
 .chartgraph
     margin-bottom: 20px
     #charttitle-container
-        margin-top: 20px
-        margin-left: 20px
-        margin-right: 20px
-        padding: 10px
-        border: 1px solid lightgray
-        background-color: white
-        box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.1)
-        //margin-bottom: 10px
         #chartselection-container
-            //padding: 10px
+            display: flex
+            flex-direction: column
             .charttitlebar
                 display: flex
                 flex-direction: row
-                align-items: center
-                color: #444
+                // flex-wrap: wrap
                 margin-bottom: 4px
+                margin-left: 4px
+                margin-right: 4px
                 .bartitle
-                    width: 150px
-                    margin-left: 10px
-                    padding-right: 10px
-                select.select-location
-                    width: 300px
+                    display: block
+                    min-width: 120px
+                    // margin-left: 10px
+                    // padding-right: 10px
+                .select-location
+                    width: 240px
                 .chartoption
-                    display: flex
-                    align-items: center
-                    // box-shadow: inset 0px 0px 1px 1px #FAFAFA
-                    //padding: 3px
-                    padding-left: 10px
-                    padding-right: 10px
-                    font-weight: 600
+                    margin-left: 2px
+                    margin-right: 2px
                     &:hover
                         cursor: pointer
                         background: lightgray
@@ -47,20 +37,20 @@
 
                 .option-container
                     display: flex
-                    border: 1px solid #AAA
-                    border-radius: 3px
+                    flex-direction: row
+                    flex-wrap: wrap
 
             #container-aggregation
                 input
-                    width: 50px
-                    height: 28px
-                    margin-right: 10px
-                    //border: 1px solid #AAA
-                    text-align: center
-                    //border-radius: 3px
+                    // width: 50px
+                    // height: 28px
+                    // margin-right: 10px
+                    // //border: 1px solid #AAA
+                    // text-align: center
+                    // //border-radius: 3px
                 select
-                    width: 100px
-                    height: 28px
+                    // width: 100px
+                    // height: 28px
 
     #chartlegend
         text-align: right
@@ -77,7 +67,7 @@
 
     .containerforspinner
         width: 100%
-        height: 70%
+        height: 74%
         padding: 10px
         display: flex
         position: relative
@@ -87,11 +77,12 @@
             //height: 680px
             position: relative
 
-    .cardgraph
-        margin-top: 20px
-        margin-left: 20px
-        margin-right: 20px
-        padding: 10px
-        border: 1px solid lightgray
-        background-color: white
-        box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.1)
+.card
+    min-width: 640px
+    margin-top: 20px
+    margin-left: 20px
+    margin-right: 20px
+    padding: 10px
+    border: 1px solid lightgray
+    background-color: white
+    box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.1)
