--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -1,5 +1,5 @@
 .chartgraph
-    margin-bottom: 20px
+    margin-bottom: 10px
     #charttitle-container
         #chartselection-container
             display: flex
@@ -7,34 +7,16 @@
             .charttitlebar
                 display: flex
                 flex-direction: row
-                // flex-wrap: wrap
-                margin-bottom: 4px
-                margin-left: 4px
-                margin-right: 4px
+                margin: 4px
                 .bartitle
+                    margin-top: 9px
+                    margin-bottom: auto
                     display: block
                     min-width: 120px
-                    // margin-left: 10px
-                    // padding-right: 10px
                 .select-location
                     width: 240px
                 .chartoption
-                    margin-left: 2px
-                    margin-right: 2px
-                    &:hover
-                        cursor: pointer
-                        background: lightgray
-                        box-shadow: none
-                    &.selected
-                        background: linear-gradient(to bottom right,#086bc2,#2c9dd1)
-                        color: white
-                        box-shadow: none
-                        border-radius: 2px
-                    input
-                        &[type='text']
-                            font-size: 14px
-                            font-family: 'Roboto'
-
+                    margin: 2px
                 .option-container
                     display: flex
                     flex-direction: row
@@ -42,15 +24,12 @@
 
             #container-aggregation
                 input
-                    // width: 50px
-                    // height: 28px
-                    // margin-right: 10px
-                    // //border: 1px solid #AAA
-                    // text-align: center
-                    // //border-radius: 3px
+                    width: 60px
+                    margin: 2px
+                    padding-left: 14px
+                    text-align: center
                 select
-                    // width: 100px
-                    // height: 28px
+                    margin: 2px
 
     #chartlegend
         text-align: right
@@ -67,22 +46,23 @@
 
     .containerforspinner
         width: 100%
-        height: 74%
+        height: calc( 100% - 289px )
         padding: 10px
         display: flex
         position: relative
         flex: 0 1 auto
         .chartdiv
             width: 100%
-            //height: 680px
             position: relative
 
 .card
-    min-width: 640px
-    margin-top: 20px
-    margin-left: 20px
-    margin-right: 20px
+    min-width: 400px
+    margin-top: 10px
+    margin-left: 10px
+    margin-right: 10px
     padding: 10px
     border: 1px solid lightgray
     background-color: white
     box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.1)
+
+
