--- a/website/src/components/status/status.sass
+++ b/website/src/components/status/status.sass
@@ -1,89 +1,92 @@
 #status
-    .card
-        width: 850px
-        margin-top: 20px
+    padding: 10px    
+    .cardinfo
+        padding-bottom: 10px
+        width: 780px
+        margin-bottom: 10px
         margin-left: auto
         margin-right: auto
-        padding: 10px
         border: 1px solid lightgray
         background-color: white
         box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.1)
         display: flex
         flex-direction: column
         justify-content: flex-start
-        table.statustable
+        .statustable
             width: 100%
-            padding-left: 10px
-            padding-right: 10px
-            margin: auto
-            //border-collapse: collapse  
-            td
-                padding-top: 4px
-                padding-bottom: 4px
-            tr.header
-                color: #333
+            margin: auto 
+            .header
+                padding: 10px 20px 10px 20px
+                color: rgba(8, 107, 194, 1)
                 font-size: 20
-                &:hover
-                    //cursor: pointer
-                    background-color: #FBFBFB
-                td
-                    border-bottom: 1px solid #333
-                &:not(:first-child)
-                    td
-                        padding-top: 20px
-
-            tr.cordsinfo
-                color: #333
-                font-size:
-                &:hover
-                    //cursor: pointer
-                    background-color: #FBFBFB
-                &:not(:first-child)
-                    td
-                        .cordsinfosetting
-                            display: flex
-                            span 
-                                display: inline-flex
-                                align-items: center
-                                white-space: nowrap
-                            .cordsinput
-                                min-width: 100px
-                                max-width: 200px
-                                margin: auto
-                                height: 36px
-                                padding-left: 4px
-                                padding-right: 4px
-                                padding-bottom: 0px
-                                padding-top: 0px
-                            .cordsbutton
-                                margin-left: 4px
-                                margin-right: 4px
-                                background-color: #086bc2
-                            .gotocordsbutton
-                                &:not(:disabled)
-                                    background-color: #086bc2
-                                width: 140px
-                                margin-left: 4px
-                                margin-right: 4px        
-
-
-            tr.columntitles
-                td
-                    font-size: 12
-                    color: darkgray
-                    &:first-child
-                        padding-left: 25px
-                    &:not(:first-child)
-                        text-align: right
-            
-            tr.gridrow
+                font-weight: bold
                 &:hover
                     cursor: pointer
-                    background-color: #FBFBFB
-                td 
-                    &:first-child
-                        font-weight: 700
-                        padding-left: 25px
-                    &:not(:first-child)
-                        padding-left: 25px
-                        text-align: right
+                    background-color: rgba(8, 107, 194, .05)
+                    border-radius: 2px
+                &:active
+                    background-color: rgba(8, 107, 194, .1)
+            .cordsinfosetting
+                display: flex
+                flex-direction: row
+                padding: 5px 20px 5px 20px
+                align-items: flex-start
+                span 
+                    margin-top: auto
+                    margin-bottom: auto
+                    display: inline-flex
+                    align-items: center
+                    white-space: nowrap
+                .spacer
+                    flex-grow: 1
+                .cordsinput
+                    max-width: 150px
+                    padding-left: 4px
+                    padding-right: 4px
+                    margin-left: 4px
+                    margin-right: 4px
+                .cordsbutton
+                    margin-left: 4px
+                    margin-right: 4px
+                .gotocordsbutton
+                    margin-left: 4px        
+            .columntitles
+                display: flex
+                flex-direction: row
+                padding: 5px 20px 5px 20px
+                margin: auto
+                align-items: flex-start
+                height: 26px
+                font-size: 12
+                color: darkgray
+                .firstct
+                    width: 150px
+                    padding-left: 25px
+                    text-align: left
+                .allothers
+                    margin-left: auto
+                    width: 80px
+                    text-align: right
+            
+            .gridrow
+                display: flex
+                flex-direction: row
+                padding: 5px 20px 5px 20px
+                margin: auto
+                align-items: flex-start
+                height: 32px
+                .firstct
+                    font-weight: bold
+                    width: 150px
+                    overflow: hidden 
+                    white-space: nowrap
+                    text-overflow: ellipsis
+                    padding-left: 25px
+                    text-align: left
+                .allothers
+                    margin-left: auto
+                    width: 80px
+                    text-align: right
+                &:hover
+                    cursor: pointer
+                    background-color: rgba(8, 107, 194, .1)
