--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -69,3 +69,76 @@ body
         // padding: 20px
         overflow-y: auto
         overflow-x: hidden
+
+.input
+    height: 36px
+    border: solid
+    border-color: rgba(8, 107, 194, 1)
+    border-width: 1px
+    border-radius: 2px
+    outline: none
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.1), 
+    0px 2px 2px 0px rgba(0, 0, 0, 0.07), 
+    0px 1px 5px 0px rgba(0, 0, 0,0.06)
+    &:hover
+        background: rgba(8, 107, 194, 0.1)
+        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 
+        0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
+        0px 1px 5px 0px rgba(0, 0, 0,0.12)
+    &:active
+        background: rgba(8, 107, 194, 0.2)
+    &:focus
+        background: white
+
+.button
+    border: solid
+    border-color: rgba(8, 107, 194, 1)
+    border-width: 1px
+    border-radius: 2px
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.1), 
+    0px 2px 2px 0px rgba(0, 0, 0, 0.07), 
+    0px 1px 5px 0px rgba(0, 0, 0,0.06)
+    color: black
+    background: white
+    outline: none
+    height: 36px
+    padding: 0 16px 0 16px
+    &:hover
+        cursor: pointer
+        background: rgba(8, 107, 194, 0.1)
+        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 
+        0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
+        0px 1px 5px 0px rgba(0, 0, 0,0.12)
+    &:active
+        background: rgba(8, 107, 194, 0.2)
+    &.selected
+        background: rgba(8, 107, 194, 1)
+        color: white
+    &:disabled
+        pointer-events: none
+        color: rgba(0,0,0,.37)
+        border-color: rgba(0,0,0,.12)
+        box-shadow: none
+                                    
+
+.select
+    height: 36px
+    border: solid
+    border-color: rgba(8, 107, 194, 1)
+    border-width: 1px
+    border-radius: 2px
+    text-align: center
+    outline: none
+    padding-left: 5px
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.1), 
+    0px 2px 2px 0px rgba(0, 0, 0, 0.07), 
+    0px 1px 5px 0px rgba(0, 0, 0,0.06)
+    &:hover
+        background: rgba(8, 107, 194, 0.1)
+        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 
+        0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
+        0px 1px 5px 0px rgba(0, 0, 0,0.12)
+    &:active
+        background: rgba(8, 107, 194, 0.2)
+    &:focus
+        background: white
