small fixes in UI

--- a/website/src/components/chartcard/chartcard.sass
+++ b/website/src/components/chartcard/chartcard.sass
@@ -46,7 +46,10 @@
 
     .containerforspinner
         width: 100%
+        min-width: 378px
         height: calc( 100% - 289px )
+        max-height: 800px
+        min-height: 300px
         padding: 10px
         display: flex
         position: relative
