--- a/website/src/index.sass
+++ b/website/src/index.sass
@@ -1,8 +1,3 @@
-@import './../node_modules/@material/button/dist/mdc.button.css'
-@import './../node_modules/@material/ripple/dist/mdc.ripple.css'
-@import './../node_modules/@material/textfield/dist/mdc.textfield.css'
-@import './../node_modules/@material/select/dist/mdc.select.css'
-@import './../node_modules/@material/tab/dist/mdc.tab.css'
 @import './assets/Icon-font-7-stroke-PIXEDEN-v-1.2.0/pe-icon-7-stroke/css/pe-icon-7-stroke.css'
 @import './assets/Icon-font-7-stroke-PIXEDEN-v-1.2.0/pe-icon-7-stroke/css/helper.css'
     
@@ -68,7 +63,7 @@ body
         flex-grow: 1
         // padding: 20px
         overflow-y: auto
-        overflow-x: hidden
+        overflow-x: auto
 
 .input
     height: 36px
